--- a/pizza.html
+++ b/pizza.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="./css/styles.css" type="text/css">
+    <title>Pizza Express</title>
+    <link rel="icon" href="./img/expresspizza.jpg" type="image/png">
 </head>
 <body>
+    <h1>WELCOME TO PIZZA EXPRESS</h1>
+
     
 </body>
 </html>
