Add stylized navigation bar

--- a/pizza.html
+++ b/pizza.html
@@ -8,9 +8,11 @@
     <link rel="icon" href="./img/slice.png" type="image/png">
 </head>
 <body>
-    <div id="navigationBar">
+    <br>
+    <div class="container" id="navigationBar" >
     <ul>
         <li><a>Home</a></li>
+        <li><a>Why Pizza?</a></li>
         <li><a>Specials</a>
            <ul>
                <li>Large double box</li>
