Add jquery script

--- a/pizza.html
+++ b/pizza.html
@@ -3,31 +3,15 @@
 <head>
     <link rel="stylesheet" href="./css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="./css/styles.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Rancho&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <title>Pizza Express</title>
     <link rel="icon" href="./img/slice.png" type="image/png">
 </head>
 <body>
-    <br>
-    <div class="container" id="navigationBar" >
-    <ul>
-        <li><a>Home</a></li>
-        <li><a>Why Pizza?</a></li>
-        <li><a>Specials</a>
-           <ul>
-               <li>Large double box</li>
-               <li>Mega double feast</li>
-               <li>Small double box</li>
-           </ul>       
-        </li>
-        <li><a>Contact Us</a>
-           <ul>
-               <li>Facebook</li>
-               <li>Instagram</li>
-               <li>Pinterest</li>
-           </ul>
-        </li>
-    </ul>
+    <div class="block1">
+        
     </div>
+   
 </body>
 </html>
