Add image slider

--- a/pizza.html
+++ b/pizza.html
@@ -9,8 +9,14 @@
     <link rel="icon" href="./img/slice.png" type="image/png">
 </head>
 <body>
-    <div class="block1">
-        
+    <div id="slider">
+        <figure>
+            <img src="../pizza/img/pizza1.jpg" alt="Mouth watering pizza">
+            <img src="../pizza/img/pizza3.jpg" alt="Mouth watering pizza">
+            <img src="../pizza/img/pizza4.jpg" alt="Mouth watering pizza">
+            <img src="../pizza/img/pizza5.jpg" alt="Mouth watering pizza">
+            <img src="../pizza/img/pizza7.jpg" alt="Mouth watering pizza">
+        </figure>
     </div>
    
 </body>
