Make stylesheet body changes

--- a/pizza.html
+++ b/pizza.html
@@ -9,6 +9,12 @@
     <link rel="icon" href="./img/slice.png" type="image/png">
 </head>
 <body>
+    <ul>
+        <li><a>Home</a></li>
+        <li><a>About Us</a></li>
+        <li><a>Menu</a></li>
+        <li><a>Contact Us</a></li>
+    </ul>
     <div id="slider">
         <figure>
             <img src="../pizza/img/pizza1.jpg" alt="Mouth watering pizza">
@@ -18,6 +24,6 @@
             <img src="../pizza/img/pizza7.jpg" alt="Mouth watering pizza">
         </figure>
     </div>
-   
+    
 </body>
 </html>
