Add navigation bar structure

--- a/pizza.html
+++ b/pizza.html
@@ -11,9 +11,26 @@
 <body>
     <ul>
         <li><a>Home</a></li>
-        <li><a>About Us</a></li>
-        <li><a>Menu</a></li>
-        <li><a>Contact Us</a></li>
+        <li><a>About Us</a>
+            <ul>
+                <li><a>“Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</a>
+            </ul></li>
+        <li><a>Mission &amp; Vision</a>
+            <ul>
+                <li><a>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a></li>
+            </ul></li>
+        <li><a>Specials</a>
+            <ul> 
+                <li><a>Medium Double Feast</a></li>
+                <li><a>Large Double Feast</a></li>
+                <li><a>Mega Feast</a></li>
+            </ul></li>
+        <li><a>Contact Us</a>
+            <ul>
+                <li><a>Facebook</a></li>
+                <li><a>Instagram</a></li> 
+                <li><a>Pinterest</a></li>
+            </ul></li>
     </ul>
     <div id="slider">
         <figure>
