Change navbar source code

--- a/pizza.html
+++ b/pizza.html
@@ -5,36 +5,15 @@
     <link rel="stylesheet" href="./css/styles.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="../pizza/js/scripts.js"></script>
     <title>Pizza Express</title>
     <link rel="icon" href="./img/slice.png" type="image/png">
 </head>
 <body>
     <br>
-    <div id="navigationBar">
-    <ul>
-        <li><a>Home</a></li>
-        <li><a>About Us</a>
-            <ul>
-                <li><a>“Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</a>
-            </ul></li>
-        <li><a>Mission &amp; Vision</a>
-            <ul>
-                <li><a>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a></li>
-            </ul></li>
-        <li><a>Specials</a>
-            <ul> 
-                <li><a>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
-                <li><a>Aliquam tincidunt mauris eu risus.</a></li>
-                <li><a>Vestibulum auctor dapibus neque.</a></li>
-            </ul></li>
-        <li><a>Contact Us</a>
-            <ul>
-                <li><a>Facebook</a></li>
-                <li><a>Instagram</a></li> 
-                <li><a>Pinterest</a></li>
-            </ul></li>
-    </ul>
-    </div>
+    <nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
+
+    </nav>
     <br><br>
     <div id="slider">
         <figure>
