--- a/pizza.html
+++ b/pizza.html
@@ -10,16 +10,14 @@
     <link rel="icon" href="./img/slice.png" type="image/png">
 </head>
 <body>
-    <br>
-    <nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
-
-    </nav>
-    <br><br>
+    <div id="nav">
+        <div id="logo">Pizza Express</div>
+        </div>         
     <div id="slider">
         <figure>
             <img src="../pizza/img/pizza1.jpg" alt="Mouth watering pizza">
-            <img src="../pizza/img/pizza3.jpg" alt="Mouth watering pizza">
-            <img src="../pizza/img/pizza4.jpg" alt="Mouth watering pizza">
+            <img src="../pizza/img/pizza9.jpg" alt="Mouth watering pizza">
+            <img src="../pizza/img/pizza8.jpg" alt="Mouth watering pizza">
             <img src="../pizza/img/pizza5.jpg" alt="Mouth watering pizza">
             <img src="../pizza/img/pizza7.jpg" alt="Mouth watering pizza">
         </figure>
