Add bouncing effect to social media icons

--- a/pizza.html
+++ b/pizza.html
@@ -12,7 +12,10 @@
 <body>
     <div id="nav">
         <div id="logo">Pizza Express</div>
-        </div>         
+        <img class="logo2" src="../delani/images/social_icons/facebook.png" alt="Facebook icon">
+        <img class="logo2" src="../delani/images/social_icons/twitter.png" alt="Twitter icon">
+        <img class="logo2" src="../delani/images/social_icons/pinterest.png" alt="Pinterest icon">
+    </div>         
     <div id="slider">
         <figure>
             <img src="../pizza/img/pizza1.jpg" alt="Mouth watering pizza">
