--- a/pizza.html
+++ b/pizza.html
@@ -26,9 +26,157 @@
         </figure>
     </div>
     <div class="box">
-        <span></span>
-        <span></span>
-        <span></span>
+        <a href="#orderForm">
+                <span></span>
+                <span></span>
+                <span></span>
+        </a>  
+    </div>
+    <div id="orderForm">
+    <div class="container">
+        <br><br>
+        <h1>Make Your Order</h1>
+        <br><br>
+        <div id="sizetable">
+            <h3 class="tablehead">Size:</h3>
+        <div class="menu initiallyHidden">	
+                <input type="radio" name="size" value="Personal">Small<br>
+                <input type="radio" name="size" value="Medium">Medium<br>
+                <input type="radio" name="size" value="Large">Large<br>
+                <input type="radio" name="size" value="Extra-Large">Mega<br>
+        </div>
+        </div>
+        <br>
+        <div id="cheesetable">
+            <h3 class="tablehead">Cheese:</h3>
+        <div class="menu initiallyHidden">	
+                <input type="radio" name="cheese" value="No"> None<br>
+                <input type="radio" name="cheese" value="Regular"> Regular<br>
+                <input type="radio" name="cheese" value="Extra"> Extra<br>
+        </div>
+        </div>
+        <br>
+        <div id="crusttable">
+            <h3 class="tablehead">Crust:</h3>
+        <div class="menu initiallyHidden">	
+                <input type="radio" name="crust" value="Plain">Plain<br>
+                <input type="radio" name="crust" value="Garlic Butter">Garlic Butter<br>
+                <input type="radio" name="crust" value="Cheese-Stuffed">Cheese-Stuffed<br>
+                <input type="radio" name="crust" value="Spicy">Spicy<br>
+                <input type="radio" name="crust" value="House Special">House Special<br>
+        </div>
+        </div>
+        <br>
+        <div id="saucetable">
+            <h3 class="tablehead">Sauce:</h3>
+        <div class="menu initiallyHidden">	
+                <input type="radio" name="sauce" value="Marinara">Marinara<br>
+                <input type="radio" name="sauce" value="White">White<br>
+                <input type="radio" name="sauce" value="Barbecue">Barbecue<br>
+                <input type="radio" name="sauce" value="No"> None<br>
+        </div>
+        </div>
+        <br>
+        <div id="meattable">
+            <h3 class="tablehead">Meat:</h3>
+        <div class="menu initiallyHidden">
+                <input type="checkbox" name="meat" value="Pepperoni">Pepperoni<br>
+                <input type="checkbox" name="meat" value="Sausage">Sausage<br>
+                <input type="checkbox" name="meat" value="Canadian Bacon">Canadian Bacon<br>
+                <input type="checkbox" name="meat" value="Ground Beef">Ground Beef<br>
+                <input type="checkbox" name="meat" value="Anchovies">Anchovies<br>
+                <input type="checkbox" name="meat" value="Chicken">Chicken<br>
+        </div>
+        </div>
+        <br>
+        <div id="vegtable">
+            <h3 class="tablehead">Veggies:</h3>
+        <div class="menu initiallyHidden">
+                <input type="checkbox" name="veg" value="Tomatoes">Fresh Tomatoes<br>
+                <input type="checkbox" name="veg" value="Onions">Onions<br>
+                <input type="checkbox" name="veg" value="Olives">Black Olive<br>
+                <input type="checkbox" name="veg" value="Green Peppers">Green Pepper<br>
+                <input type="checkbox" name="veg" value="Mushrooms">Mushroom<br>
+                <input type="checkbox" name="veg" value="Pineapple">Pineapple<br>
+                <input type="checkbox" name="veg" value="Spinach">Spinach<br>
+                <input type="checkbox" name="veg" value="Jalape&ntildeo">Jalape&ntildeo<br>
+        </div>
+        </div>
+        <br>
+        <br>
+            <button id="calc" type="submit" onclick="invoice()">Make Order</button>
+            <br><br>
+            <table class="pizza" style="width: 50%;" border="1" cellpadding="5">
+                <tbody>
+                    <tr>
+                        <td id="size"></td>
+                        <td id="sizeprice"></td>
+                    </tr>
+                    <tr>
+                        <td id="crust"></td>
+                        <td id="crustprice"></td>
+                    </tr>
+                    <tr>
+                        <td id="cheese"></td>
+                        <td id="cheeseprice"></td>
+                    </tr>
+                    <tr>
+                        <td id="sauce"></td>
+                        <td id="sauceprice"></td>
+                    </tr>
+                    <tr>
+                        <td id="meat"></td>
+                        <td id="meatprice"></td>
+                    </tr>
+                    <tr>
+                        <td id="veg"></td>
+                        <td id="vegprice"></td>
+                    </tr>
+                    <tr>
+                        <td><strong>TOTAL PRICE:</strong></td>
+                        <td id="totalprice"></td>
+                    </tr>
+                </tbody>
+            </table>
+            <br>
+            <br>
+    </div>
+            <br>
+            <br>
+            <button id="calc" type="submit" onclick="invoice()">Submit order</button>
+            <br><br>
+            <table class="pizza" style="width: 50%;" border="1" cellpadding="5">
+                <tbody>
+                    <tr>
+                        <td id="size"></td>
+                        <td id="sizeprice"></td>
+                    </tr>
+                    <tr>
+                        <td id="crust"></td>
+                        <td id="crustprice"></td>
+                    </tr>
+                    <tr>
+                        <td id="cheese"></td>
+                        <td id="cheeseprice"></td>
+                    </tr>
+                    <tr>
+                        <td id="sauce"></td>
+                        <td id="sauceprice"></td>
+                    </tr>
+                    <tr>
+                        <td id="meat"></td>
+                        <td id="meatprice"></td>
+                    </tr>
+                    <tr>
+                        <td id="veg"></td>
+                        <td id="vegprice"></td>
+                    </tr>
+                    <tr>
+                        <td><strong>TOTAL PRICE:</strong></td>
+                        <td id="totalprice"></td>
+                    </tr>
+                </tbody>
+            </table>
     </div>
 </body>
 </html>
