--- a/pizza.html
+++ b/pizza.html
@@ -32,13 +32,12 @@
                 <span></span>
         </a>  
     </div>
-    <div id="orderForm">
-    <div class="container">
+    <div class="container" id="orderForm">
         <br><br>
         <h1>Make Your Order</h1>
         <br><br>
         <div id="sizetable">
-            <h3 class="tablehead">Size:</h3>
+            <h3 class="tablehead"><button> Size </button></Size-></h3>
         <div class="menu initiallyHidden">	
                 <input type="radio" name="size" value="Personal">Small<br>
                 <input type="radio" name="size" value="Medium">Medium<br>
@@ -48,7 +47,7 @@
         </div>
         <br>
         <div id="cheesetable">
-            <h3 class="tablehead">Cheese:</h3>
+            <h3 class="tablehead"><button> Cheese </button></h3>
         <div class="menu initiallyHidden">	
                 <input type="radio" name="cheese" value="No"> None<br>
                 <input type="radio" name="cheese" value="Regular"> Regular<br>
@@ -57,7 +56,7 @@
         </div>
         <br>
         <div id="crusttable">
-            <h3 class="tablehead">Crust:</h3>
+            <h3 class="tablehead"><button> Crust </button></h3>
         <div class="menu initiallyHidden">	
                 <input type="radio" name="crust" value="Plain">Plain<br>
                 <input type="radio" name="crust" value="Garlic Butter">Garlic Butter<br>
@@ -68,7 +67,7 @@
         </div>
         <br>
         <div id="saucetable">
-            <h3 class="tablehead">Sauce:</h3>
+            <h3 class="tablehead"><button> Sauce </button></h3>
         <div class="menu initiallyHidden">	
                 <input type="radio" name="sauce" value="Marinara">Marinara<br>
                 <input type="radio" name="sauce" value="White">White<br>
@@ -78,19 +77,19 @@
         </div>
         <br>
         <div id="meattable">
-            <h3 class="tablehead">Meat:</h3>
+            <h3 class="tablehead"><button> Meat </button></h3>
         <div class="menu initiallyHidden">
                 <input type="checkbox" name="meat" value="Pepperoni">Pepperoni<br>
                 <input type="checkbox" name="meat" value="Sausage">Sausage<br>
-                <input type="checkbox" name="meat" value="Canadian Bacon">Canadian Bacon<br>
-                <input type="checkbox" name="meat" value="Ground Beef">Ground Beef<br>
+                <input type="checkbox" name="meat" value="Canadian Bacon">Bacon<br>
+                <input type="checkbox" name="meat" value="Ground Beef">Beef<br>
                 <input type="checkbox" name="meat" value="Anchovies">Anchovies<br>
                 <input type="checkbox" name="meat" value="Chicken">Chicken<br>
         </div>
         </div>
         <br>
         <div id="vegtable">
-            <h3 class="tablehead">Veggies:</h3>
+            <h3 class="tablehead"><button> Veggies </button></h3>
         <div class="menu initiallyHidden">
                 <input type="checkbox" name="veg" value="Tomatoes">Fresh Tomatoes<br>
                 <input type="checkbox" name="veg" value="Onions">Onions<br>
@@ -133,7 +132,7 @@
                         <td id="vegprice"></td>
                     </tr>
                     <tr>
-                        <td><strong>TOTAL PRICE:</strong></td>
+                        <td><strong>TOTAL:</strong></td>
                         <td id="totalprice"></td>
                     </tr>
                 </tbody>
@@ -142,41 +141,6 @@
             <br>
     </div>
             <br>
-            <br>
-            <button id="calc" type="submit" onclick="invoice()">Submit order</button>
-            <br><br>
-            <table class="pizza" style="width: 50%;" border="1" cellpadding="5">
-                <tbody>
-                    <tr>
-                        <td id="size"></td>
-                        <td id="sizeprice"></td>
-                    </tr>
-                    <tr>
-                        <td id="crust"></td>
-                        <td id="crustprice"></td>
-                    </tr>
-                    <tr>
-                        <td id="cheese"></td>
-                        <td id="cheeseprice"></td>
-                    </tr>
-                    <tr>
-                        <td id="sauce"></td>
-                        <td id="sauceprice"></td>
-                    </tr>
-                    <tr>
-                        <td id="meat"></td>
-                        <td id="meatprice"></td>
-                    </tr>
-                    <tr>
-                        <td id="veg"></td>
-                        <td id="vegprice"></td>
-                    </tr>
-                    <tr>
-                        <td><strong>TOTAL PRICE:</strong></td>
-                        <td id="totalprice"></td>
-                    </tr>
-                </tbody>
-            </table>
-    </div>
+            <br>           
 </body>
 </html>
