--- a/pizza.html
+++ b/pizza.html
@@ -145,6 +145,7 @@
             <br>
     </div>
             <br>
-            <br>           
+            <br>
+    <footer>Pizza Express | Eat Responsibly</footer>           
 </body>
 </html>
