--- a/pizza.html
+++ b/pizza.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="./css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="./css/styles.css" type="text/css">
@@ -9,13 +10,17 @@
     <title>Pizza Express</title>
     <link rel="icon" href="./img/slice.png" type="image/png">
 </head>
+
 <body>
     <div id="nav">
         <div id="logo">Pizza Express</div>
-        <a href="http://www.facebook.com"><img class="logo2" src="../delani/images/social_icons/facebook.png" alt="Facebook icon"></a>
-        <a href="http://www.twitter.com"><img class="logo2" src="../delani/images/social_icons/twitter.png" alt="Twitter icon"></a>
-        <a href="http://www.pinterest.com"><img class="logo2" src="../delani/images/social_icons/pinterest.png" alt="Pinterest icon"></a>
-    </div>         
+        <a href="http://www.facebook.com"><img class="logo2" src="../delani/images/social_icons/facebook.png"
+                alt="Facebook icon"></a>
+        <a href="http://www.twitter.com"><img class="logo2" src="../delani/images/social_icons/twitter.png"
+                alt="Twitter icon"></a>
+        <a href="http://www.pinterest.com"><img class="logo2" src="../delani/images/social_icons/pinterest.png"
+                alt="Pinterest icon"></a>
+    </div>
     <div id="slider">
         <figure>
             <img src="../pizza/img/pizza1.jpg" alt="Mouth watering pizza">
@@ -26,126 +31,105 @@
         </figure>
     </div>
     <div class="box">
-        <a href="#orderForm">
-                <span></span>
-                <span></span>
-                <span></span>
-        </a>  
+        <a href="#order">
+            <span></span>
+            <span></span>
+            <span></span>
+        </a>
     </div>
-    <div class="container" id="orderForm">
-        <br><br>
-        <h1 id="yourOrder">Make Your Order</h1>
-        <br><br>
-        <div class="row">
-        <div id="sizetable" class="col-md-2">
-            <h3 class="tablehead"><button> Size </button></Size-></h3>
-        <div class="menu initiallyHidden">	
-                <input type="radio" name="size" value="Personal">Small<br>
-                <input type="radio" name="size" value="Medium">Medium<br>
-                <input type="radio" name="size" value="Large">Large<br>
-                <input type="radio" name="size" value="Extra-Large">Mega<br>
-        </div>
-        </div>
-        <br>
-        <div id="cheesetable" class="col-md-2">
-            <h3 class="tablehead"><button> Cheese </button></h3>
-        <div class="menu initiallyHidden">	
-                <input type="radio" name="cheese" value="No"> None<br>
-                <input type="radio" name="cheese" value="Regular"> Regular<br>
-                <input type="radio" name="cheese" value="Extra"> Extra<br>
-        </div>
-        </div>
-        <br>
-        <div id="crusttable" class="col-md-2">
-            <h3 class="tablehead"><button> Crust </button></h3>
-        <div class="menu initiallyHidden">	
-                <input type="radio" name="crust" value="Plain">Plain<br>
-                <input type="radio" name="crust" value="Garlic Butter">Garlic Butter<br>
-                <input type="radio" name="crust" value="Cheese-Stuffed">Cheese-Stuffed<br>
-                <input type="radio" name="crust" value="Spicy">Spicy<br>
-                <input type="radio" name="crust" value="House Special">House Special<br>
-        </div>
-        </div>
-        <br>
-        <div id="saucetable" class="col-md-2">
-            <h3 class="tablehead"><button> Sauce </button></h3>
-        <div class="menu initiallyHidden">	
-                <input type="radio" name="sauce" value="Marinara">Marinara<br>
-                <input type="radio" name="sauce" value="White">White<br>
-                <input type="radio" name="sauce" value="Barbecue">Barbecue<br>
-                <input type="radio" name="sauce" value="No"> None<br>
-        </div>
-        </div>
-        <br>
-        <div id="meattable" class="col-md-2">
-            <h3 class="tablehead"><button> Meat </button></h3>
-        <div class="menu initiallyHidden">
-                <input type="checkbox" name="meat" value="Pepperoni">Pepperoni<br>
-                <input type="checkbox" name="meat" value="Sausage">Sausage<br>
-                <input type="checkbox" name="meat" value="Canadian Bacon">Bacon<br>
-                <input type="checkbox" name="meat" value="Ground Beef">Beef<br>
-                <input type="checkbox" name="meat" value="Anchovies">Anchovies<br>
-                <input type="checkbox" name="meat" value="Chicken">Chicken<br>
-        </div>
-        </div>
-        <br>
-        <div id="vegtable" class="col-md-2">
-            <h3 class="tablehead"><button> Veggies </button></h3>
-        <div class="menu initiallyHidden">
-                <input type="checkbox" name="veg" value="Tomatoes">Fresh Tomatoes<br>
-                <input type="checkbox" name="veg" value="Onions">Onions<br>
-                <input type="checkbox" name="veg" value="Olives">Black Olive<br>
-                <input type="checkbox" name="veg" value="Green Peppers">Green Pepper<br>
-                <input type="checkbox" name="veg" value="Mushrooms">Mushroom<br>
-                <input type="checkbox" name="veg" value="Pineapple">Pineapple<br>
-                <input type="checkbox" name="veg" value="Spinach">Spinach<br>
-                <input type="checkbox" name="veg" value="Jalape&ntildeo">Jalape&ntildeo<br>
-        </div>
-        </div>
-    </div>
-        <br>
-        <br>
-            <div id="makeOrder">
-            <button id="calc" type="submit" onclick="invoice()">Make Order</button>
+    <div id="order">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <br><br>
+                    <h1 class="centerAlgned">Order Now!</h1>
+                    <p class="centerAligned">When you are ready to place your order, please input your order details
+                        below.</p>
+                </div>
+                <form id="form" action="">
+                    <label for="select" class="center">Type Of Pizza:</label>
+                    <select class="browser-default custom-select custom-select-md mb-3 " id="type">
+                        <option value="Meat Deluxe">Meat Deluxe</option>
+                        <option value="BBQ Macon">BBQ Macon</option>
+                        <option value="Chicken PeriPeri">Chicken PeriPeri</option>
+                        <option value="Buffalo Cauliflower Wing with Tofu Blue Cheese Spread">Buffalo Cauliflower Wing
+                            with Tofu Blue Cheese Spread</option>
+                        <option value="Vegan Margherita">Vegan Margherita</option>
+                        <option value="Eggplant and Caramelized Onions">Eggplant and Caramelized Onions</option>
+                    </select><br><br>
+                    <label for="select">Size</label>
+                    <select class="browser-default custom-select custom-select-md mb-3" id="size">
+                        <option value="Large">Large - Ksh 1,000</option>
+                        <option value="Medium">Medium - Ksh 800</option>
+                        <option value="Small">Small - Ksh 600</option>
+                    </select><br><br>
+                    <label for="crust">Crust</label>
+                    <select class="browser-default custom-select custom-select-md mb-3" id="crust">
+                        <option value="Regular">Regular - Ksh 100</option>
+                        <option value="Crispy">Crispy - Ksh 150</option>
+                        <option value="Gluten-free">Gluten-free - Ksh 200</option>
+                        <option value="Stuffed">Stuffed - Ksh 250</option>
+                    </select><br><br>
+                    <label for="Toppings">Toppings. Each For Ksh 70.</label><br>
+                    <input type="checkbox" name="toppings" id="Macon" value="Macon"> Macon<br>
+                    <input type="checkbox" name="toppings" id="Pepperoni" value="Pepperoni"> Pepperoni<br>
+                    <input type="checkbox" name="toppings" id="Chicken" value="Chicken"> Chicken<br>
+                    <input type="checkbox" name="toppings" id="Cauliflower" value="Cauliflower"> Cauliflower<br>
+                    <input type="checkbox" name="toppings" id="Tomato" value="Cherry Tomato Slices"> Cherry Tomato
+                    Slices<br>
+                    <input type="checkbox" name="toppings" id="Eggplant" value="Eggplant"> Eggplant<br><br>
+                    <button type="submit" class="btn btn-info proceed" id="continue">Continue</button>
+                    <br>
+                    <br>
+                </form>
             </div>
-            <br><br>
-            <table class="pizza" style="width: 50%;" border="1" cellpadding="5">
-                <tbody>
-                    <tr>
-                        <td id="size"></td>
-                        <td id="sizeprice"></td>
-                    </tr>
-                    <tr>
-                        <td id="crust"></td>
-                        <td id="crustprice"></td>
-                    </tr>
-                    <tr>
-                        <td id="cheese"></td>
-                        <td id="cheeseprice"></td>
-                    </tr>
-                    <tr>
-                        <td id="sauce"></td>
-                        <td id="sauceprice"></td>
-                    </tr>
-                    <tr>
-                        <td id="meat"></td>
-                        <td id="meatprice"></td>
-                    </tr>
-                    <tr>
-                        <td id="veg"></td>
-                        <td id="vegprice"></td>
-                    </tr>
-                    <tr>
-                        <td><strong>TOTAL:</strong></td>
-                        <td id="totalprice"></td>
-                    </tr>
-                </tbody>
-            </table>
-            <br>
-            <br>
+        </div>
+        <div class="container6">
+            <div id="choice">
+                <h2>This Is Your Order</h2>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Type</th>
+                            <th scope="col">Size</th>
+                            <th scope="col">Crust</th>
+                            <th scope="col">Topping</th>
+                            <th scope="col">Total</th>
+                        </tr>
+                    </thead>
+                    <tbody id="inputorder">
+                        <tr>
+                            <td id="pizzatype"></td>
+                            <td id="pizzasize"></td>
+                            <td id="pizzacrust"></td>
+                            <td id="pizzatopping"></td>
+                            <td id="totals"></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <p id="pizzatotal"></p>
+                <p id="totalamount"></p>
+                <p id="plusdelivery">Delivery Fee Of Ksh 200</p>
+                <p id="finalmessage"></p>
+            </div>
+            <button class="btn btn-orange add-pizza">Add Pizza</button>
+            <button class="btn btn-orange" id="complete">Complete Order</button>
+            <button class="btn btn-orange deliver">Delivery</button>
+        </div>
+    </div><br><br>
+    <div class="delivery">
+        <div class="container7">
+            <form action="">
+                <div class="form-group">
+                    <input type="text" id="name" class="form-control mb-3" placeholder="Name">
+                    <input type="number" id="phone" class="form-control mb-3" placeholder="Phone Number">
+                    <input type="text" id="location" class="form-control mb-3" placeholder="Delivery location">
+                    <button class="btn btn-orange" id="final-order">Place order</button>
+                </div>
+            </form>
+        </div>
     </div>
-            <br>
-            <br>
-    <footer>Pizza Express | Eat Responsibly</footer>           
+    <footer>Pizza Express | Eat Responsibly</footer>
 </body>
+
 </html>
