Make stylesheet changes

--- a/pizza.html
+++ b/pizza.html
@@ -37,14 +37,12 @@
             <span></span>
         </a>
     </div>
-    <div id="order">
+    <div id="order" class="row">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <br><br>
-                    <h1 class="centerAlgned">Order Now!</h1>
-                    <p class="centerAligned">When you are ready to place your order, please input your order details
-                        below.</p>
+                    <h1 class="centerAlgned">Make Your Order</h1><br>
                 </div>
                 <form id="form" action="">
                     <label for="select" class="center">Type Of Pizza:</label>
@@ -52,8 +50,7 @@
                         <option value="Meat Deluxe">Meat Deluxe</option>
                         <option value="BBQ Macon">BBQ Macon</option>
                         <option value="Chicken PeriPeri">Chicken PeriPeri</option>
-                        <option value="Buffalo Cauliflower Wing with Tofu Blue Cheese Spread">Buffalo Cauliflower Wing
-                            with Tofu Blue Cheese Spread</option>
+                        <option value="Buffalo Cauliflower Wing with Tofu Blue Cheese Spread">Buffalo Cauliflower Wing with Tofu Blue Cheese Spread</option>
                         <option value="Vegan Margherita">Vegan Margherita</option>
                         <option value="Eggplant and Caramelized Onions">Eggplant and Caramelized Onions</option>
                     </select><br><br>
@@ -84,7 +81,7 @@
                 </form>
             </div>
         </div>
-        <div class="container6">
+        <div class="container">
             <div id="choice">
                 <h2>This Is Your Order</h2>
                 <table class="table">
@@ -112,13 +109,13 @@
                 <p id="plusdelivery">Delivery Fee Of Ksh 200</p>
                 <p id="finalmessage"></p>
             </div>
-            <button class="btn btn-orange add-pizza">Add Pizza</button>
-            <button class="btn btn-orange" id="complete">Complete Order</button>
-            <button class="btn btn-orange deliver">Delivery</button>
+            <button class="btn btn-danger add-pizza">Add Pizza</button>
+            <button class="btn btn-danger" id="complete">Complete Order</button>
+            <button class="btn btn-danger deliver">Delivery</button>
         </div>
     </div><br><br>
     <div class="delivery">
-        <div class="container7">
+        <div class="container">
             <form action="">
                 <div class="form-group">
                     <input type="text" id="name" class="form-control mb-3" placeholder="Name">
