Add html form changes

--- a/pizza.html
+++ b/pizza.html
@@ -42,7 +42,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <br><br>
-                    <h1 class="centerAlgned">Make Your Order</h1><br>
+                    <h1 class="centerAlgned">Make Your Order</h1><br><br><br>
                 </div>
                 <form id="form" action="">
                     <label for="select" class="center">Type Of Pizza:</label>
@@ -83,6 +83,7 @@
         </div>
         <div class="container">
             <div id="choice">
+                <br><br>
                 <h2>This Is Your Order</h2>
                 <table class="table">
                     <thead>
@@ -121,7 +122,7 @@
                     <input type="text" id="name" class="form-control mb-3" placeholder="Name">
                     <input type="number" id="phone" class="form-control mb-3" placeholder="Phone Number">
                     <input type="text" id="location" class="form-control mb-3" placeholder="Delivery location">
-                    <button class="btn btn-orange" id="final-order">Place order</button>
+                    <button class="btn btn-success" id="final-order">Place order</button>
                 </div>
             </form>
         </div>
