--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="../pizza/js/scripts.js"></script>
     <title>Pizza Express</title>
-    <link rel="icon" href="./img/slice.png" type="image/png">
+    <link rel="icon" href="img/slice.png" type="image/png">
 </head>
 
 <body>
@@ -23,11 +23,11 @@
     </div>
     <div id="slider">
         <figure>
-            <img src="../pizza/img/pizza1.jpg" alt="Mouth watering pizza">
-            <img src="../pizza/img/pizza9.jpg" alt="Mouth watering pizza">
-            <img src="../pizza/img/pizza8.jpg" alt="Mouth watering pizza">
-            <img src="../pizza/img/pizza5.jpg" alt="Mouth watering pizza">
-            <img src="../pizza/img/pizza7.jpg" alt="Mouth watering pizza">
+            <img src="img/pizza1.jpg" alt="Mouth watering pizza">
+            <img src="img/pizza9.jpg" alt="Mouth watering pizza">
+            <img src="img/pizza8.jpg" alt="Mouth watering pizza">
+            <img src="img/pizza5.jpg" alt="Mouth watering pizza">
+            <img src="img/pizza7.jpg" alt="Mouth watering pizza">
         </figure>
     </div>
     <div class="box">
